# commit-template

./: .envrc  .releaserc.json  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
.husky/: commit-msg  prepare-commit-msg
pydemo/: pyproject.toml
pydemo/src/pydemo/: fibonacci.py
pydemo/tests/: test_fibonacci.py
