[tool.poetry]
name = "pydemo"
version = "0.1.0"
description = ""
authors = ["Shangjin Tang <shangjin.tang@gmail.com>"]
readme = "README.md"
packages = [{include = "pydemo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
